@@ -89,6 +89,7 @@ export(abbreviateTimeLabels,
        detrend,
        download.amsr,
        download.coastline,
+       download.met,
        download.topo,
        drawDirectionField,
        drawIsopycnals,
