@@ -1,6 +1,6 @@
 #' @section Warning:
 #' All of the \code{download.*} functions are subject to change through the
-#' autumn of 2016. The plan is to create individual functions
+#' year 2017. The plan is to create individual functions
 #' as needs arise in everyday work, thereby discovering patterns of 
 #' arguments that might make sense more generally. Therefore, it is likely
 #' that argument order (and even name) may change up until approximately
