@@ -43,7 +43,7 @@ only work on unix-like systems.
 \section{Warning}{
 
 All of the \code{download.*} functions are subject to change through the
-autumn of 2016. The plan is to create individual functions
+year 2017. The plan is to create individual functions
 as needs arise in everyday work, thereby discovering patterns of 
 arguments that might make sense more generally. Therefore, it is likely
 that argument order (and even name) may change up until approximately
@@ -53,7 +53,7 @@ because argument names and defaults may vary through the early development.
 }
 \seealso{
 Other functions that download files: \code{\link{download.coastline}},
-  \code{\link{download.topo}}
+  \code{\link{download.met}}, \code{\link{download.topo}}
 
 Other things related to \code{amsr} data: \code{\link{[[<-,amsr-method}},
   \code{\link{amsr-class}},
