@@ -103,8 +103,9 @@ Other functions that plot \code{oce} data: \code{\link{plot,adp-method}},
 
 Other things related to \code{met} data: \code{\link{[[,met-method}},
   \code{\link{[[<-,met-method}}, \code{\link{as.met}},
-  \code{\link{met-class}}, \code{\link{met}},
-  \code{\link{read.met}}, \code{\link{subset,met-method}},
+  \code{\link{download.met}}, \code{\link{met-class}},
+  \code{\link{met}}, \code{\link{read.met}},
+  \code{\link{subset,met-method}},
   \code{\link{summary,met-method}}
 }
 
