@@ -33,8 +33,8 @@ Dan Kelley
 \seealso{
 Other things related to \code{met} data: \code{\link{[[,met-method}},
   \code{\link{[[<-,met-method}}, \code{\link{as.met}},
-  \code{\link{met-class}}, \code{\link{met}},
-  \code{\link{plot,met-method}}, \code{\link{read.met}},
-  \code{\link{summary,met-method}}
+  \code{\link{download.met}}, \code{\link{met-class}},
+  \code{\link{met}}, \code{\link{plot,met-method}},
+  \code{\link{read.met}}, \code{\link{summary,met-method}}
 }
 
