@@ -1,4 +1,5 @@
 0.9-21
+- download.met() added
 - as.ctd() can specify columns within argo data
 - read.adp.rdi() handles more file types and larger RDI files
 - read.odf() handles contradictory metadata better
